--- a/assets/css/menu/menu-link.css
+++ b/assets/css/menu/menu-link.css
@@ -4,7 +4,7 @@
     color: #808080;
     margin-right: 1.25rem;
     text-decoration: none;
-    text-transform: lowercase;
+    text-transform: uppercase;
 }
 
 .menu__link.ativo{
