--- a/assets/css/sobre/sobre.css
+++ b/assets/css/sobre/sobre.css
@@ -1,6 +1,17 @@
 @charset "UTF-8";
 
 .sobre{
-    padding: 2.5rem;
     text-align: center;
+}
+
+@media screen and (min-width: 0){
+    .sobre{
+        padding: 2.5rem 1rem;
+    }
+}
+
+@media screen and (min-width: 768px){
+    .sobre{
+        padding: 2.5rem;
+    }
 }
